#graph creating changes

--- a/testRoundTrip/Makefile
+++ b/testRoundTrip/Makefile
@@ -53,7 +53,7 @@
 ######################################################
 # pick your compiler
 ######################################################
-F95=ifort -g -fpe0 -O0  
+F95= ifort -g -fpe0 -O0  
 CC=icc
 
 #F95=f95 -g -w=unused
@@ -64,6 +64,8 @@ ifdef REVERSE_MODE
 MODULES=                        \
 w2f__types.o                    \
 active_module.o                 \
+checkpoint_module.o             \
+graph_module.o                  \
 OpenAD_checkpoints.o            \
 OpenAD_dct.o                    \
 OpenAD_rev.o                    \
