--- a/algorithms/AddressArithmetic/test/Makefile
+++ b/algorithms/AddressArithmetic/test/Makefile
@@ -1,9 +1,9 @@
 MAIN=t
 
-test: $(MAIN) quickRegression.bash
+test: buildStamp.hpp $(MAIN) quickRegression.bash
 
 clean:
-	rm -f obj/*.o obj/*.d $(MAIN) quickRegression.bash
+	rm -f buildStamp.hpp obj/*.o obj/*.d $(MAIN) quickRegression.bash
 	rm -rf tmp
 
 obj doc: ;
