--- a/Makefile.incl
+++ b/Makefile.incl
@@ -155,7 +155,7 @@ obj/%.o: %.cpp
 	       -e '/^$$/ d' \
 	       -e 's,$$, :,' < obj/$*.d.$$$$ >> obj/$*.d; \
 	   rm -f obj/$*.d.$$$$
-	$(CC) $(CCFLAGS) -o3 $(IPATH) -c $< -o $@
+	$(CC) $(CCFLAGS) $(IPATH) -c $< -o $@
 
 buildStamp.hpp: FORCE
 	$(XAIFBOOSTERROOT)/xaifBooster/createBuildStamp.sh
