insert -check all  which circumvents the signalling problems with ifort's forrtl

--- a/testRoundTrip/Makefile
+++ b/testRoundTrip/Makefile
@@ -53,7 +53,7 @@
 ######################################################
 # pick your compiler
 ######################################################
-F95=ifort -g -fpe0 -O0  
+F95=ifort -check all -g -fpe0 -O0  
 CC=icc
 
 #F95=f95 -g -w=unused
