Refine Simple Loop behavior (part 1 compilable changes)

--- a/testRoundTrip/Makefile
+++ b/testRoundTrip/Makefile
@@ -117,11 +117,11 @@ head_sf.B: head_sf.f mfef90
 
 # WHIRL -> XAIF
 head_sf.xaif : head_sf.B whirl2xaif
-	./whirl2xaif -o $@ $<
+	./whirl2xaif -s -o $@ $<
 
 # XAIF -> XAIF'
 head_sf.xb.xaif : head_sf.xaif xaif.xsd xaif_base.xsd xaif_inlinable_intrinsics.xsd xaif_derivative_propagator.xsd xaif_output.xsd xaifBooster
-	./xaifBooster -i $< -c ${XAIFSCHEMAROOT}/schema/examples/inlinable_intrinsics.xaif -o $@ $(CP_FLAG)
+	./xaifBooster -u -i $< -c ${XAIFSCHEMAROOT}/schema/examples/inlinable_intrinsics.xaif -o $@ $(CP_FLAG) -g 8 
 
 # XAIF' -> WHIRL'
 head_sf.xb.x2w.B : head_sf.xb.xaif xaif2whirl
