--- a/algorithms/BasicBlockPreaccumulationTape/test/Makefile
+++ b/algorithms/BasicBlockPreaccumulationTape/test/Makefile
@@ -80,6 +80,9 @@ LIBS+=-lxaifBoosterDerivativePropagator
 VPATH+=../../InlinableXMLRepresentation/lib
 LIBS+=-lxaifBoosterInlinableXMLRepresentation
 
+VPATH+=../../AdjointUtils/lib
+LIBS+=-lxaifBoosterAdjointUtils
+
 # setup for ANGEL
 ifndef ANGELROOT
   $(error "Error:  environment variable ANGELROOT not defined!")
