--- a/algorithms/AddressArithmetic/test/Makefile
+++ b/algorithms/AddressArithmetic/test/Makefile
@@ -34,6 +34,9 @@ LIBS+=-lxaifBoosterDerivativePropagator
 VPATH+=../../InlinableXMLRepresentation/lib
 LIBS+=-lxaifBoosterInlinableXMLRepresentation
 
+VPATH+=../../AdjointUtils/lib
+LIBS+=-lxaifBoosterAdjointUtils
+
 VPATH+=../../CodeReplacement/lib
 LIBS+=-lxaifBoosterCodeReplacement
 
