--- a/algorithms/ControlFlowReversal/test/Makefile
+++ b/algorithms/ControlFlowReversal/test/Makefile
@@ -83,6 +83,9 @@ LIBS+=-lxaifBoosterDerivativePropagator
 VPATH+=../../InlinableXMLRepresentation/lib
 LIBS+=-lxaifBoosterInlinableXMLRepresentation
 
+VPATH+=../../AdjointUtils/lib
+LIBS+=-lxaifBoosterAdjointUtils
+
 # setup for ANGEL
 ifndef ANGELROOT
   $(error "Error:  environment variable ANGELROOT not defined!")
