remove unnecessary dependency to Linearization from ControlFlowReversal (the inheritance pattern was also inconsistent between the algorithm classes and the quickregresssion did not work before this cleanup)

--- a/algorithms/ControlFlowReversal/test/Makefile
+++ b/algorithms/ControlFlowReversal/test/Makefile
@@ -70,15 +70,6 @@ include ../../../Makefile.incl
 
 # pick up all algorithm specific obj files
 ALG_OBJ_SET=$(wildcard ../src/obj/*.o)
-BASICBLOCKPREACCUMULATION_OBJ_SET=$(wildcard $(XAIFBOOSTERROOT)/$(ROOTDIR)/algorithms/BasicBlockPreaccumulation/src/obj/*.o)
-CROSSCOUNTRYINTERFACE_OBJ_SET=$(wildcard $(XAIFBOOSTERROOT)/$(ROOTDIR)/algorithms/CrossCountryInterface/src/obj/*.o)
-LINEARIZATION_OBJ_SET=$(wildcard $(XAIFBOOSTERROOT)/$(ROOTDIR)/algorithms/Linearization/src/obj/*.o)
-
-VPATH+=../../CrossCountryInterface/lib
-LIBS+=-lxaifBoosterCrossCountryInterface
-
-VPATH+=../../DerivativePropagator/lib
-LIBS+=-lxaifBoosterDerivativePropagator
 
 VPATH+=../../InlinableXMLRepresentation/lib
 LIBS+=-lxaifBoosterInlinableXMLRepresentation
@@ -94,7 +85,7 @@ endif
 VPATH+=$(ANGELROOT)/lib
 LIBS+=-langel
 
-$(MAIN): $(OBJS) $(ALG_OBJ_SET) $(BASICBLOCKPREACCUMULATION_OBJ_SET) $(LINEARIZATION_OBJ_SET) $(SYSTEM_OBJ_SET) $(LIBS) 
+$(MAIN): $(OBJS) $(ALG_OBJ_SET) $(SYSTEM_OBJ_SET) $(LIBS) 
 	$(CC) $^ $(LFLAGS) -o $@
 
 
