--- a/algorithms/AddressArithmetic/Makefile
+++ b/algorithms/AddressArithmetic/Makefile
@@ -1,8 +1,7 @@
 default: obj test 
 
-obj test doc clean:
+obj test clean:
 	cd src && $(MAKE) $@
 	cd test && $(MAKE) $@
-	cd doc && $(MAKE) $@
 
-.PHONY: default obj test doc clean
+.PHONY: default obj test clean
