--- a/algorithms/CodeReplacement/src/Makefile
+++ b/algorithms/CodeReplacement/src/Makefile
@@ -68,6 +68,6 @@ $(MAIN): $(OBJS)
 clean:
 	rm -f obj/*.o obj/*.d $(MAIN)
 
-test doc: ;
+test : ;
 
-.PHONY: obj test doc clean default
+.PHONY: obj test clean default
