--- a/algorithms/InlinableXMLRepresentation/Makefile
+++ b/algorithms/InlinableXMLRepresentation/Makefile
@@ -52,7 +52,7 @@
 # ========== end copyright notice ==============
 default: obj test 
 
-obj test doc clean:
+obj test clean:
 	cd src && $(MAKE) $@
 
-.PHONY: default obj test doc clean
+.PHONY: default obj test clean
