makefile cleanup part 1

--- a/Makefile.incl
+++ b/Makefile.incl
@@ -132,6 +132,10 @@ export OBJS=$(addprefix obj/, $(addsuffix .o, $(FLIST)))
 # include the dependency information 
 export DEPINCL = $(addprefix obj/, $(addsuffix .d, $(FLIST)))
 
+# make object dir
+obj: 
+	mkdir  obj
+
 # compile the objects
 # as part of this we create dependency information 
 # 1: echo complaint about any undefined variable
