--- a/algorithms/ConstantFolding/src/Makefile
+++ b/algorithms/ConstantFolding/src/Makefile
@@ -56,11 +56,11 @@ default: obj
 include ../../../Makefile.incl
 -include $(DEPINCL)
 
-obj: $(OBJS)
+objs: obj $(OBJS)
 
 clean:
 	rm -f obj/*.o obj/*.d
 
 test : ;
 
-.PHONY: obj test clean
+.PHONY: objs test clean
