--- a/algorithms/TypeChange/Makefile
+++ b/algorithms/TypeChange/Makefile
@@ -50,10 +50,10 @@
 # This work is partially supported by:
 # 	NSF-ITR grant OCE-0205590
 # ========== end copyright notice ==============
-default: obj test 
+default: objs test 
 
-obj test clean:
+objs test clean:
 	cd src && $(MAKE) $@
 	cd test && $(MAKE) $@
 
-.PHONY: default obj test clean
+.PHONY: default objs test clean
