--- a/system/src/Makefile
+++ b/system/src/Makefile
@@ -56,12 +56,12 @@ default: obj
 include ../../Makefile.incl
 -include $(DEPINCL)
 
-obj: $(OBJS)
+objs: obj $(OBJS)
 
 clean:
 	rm -f obj/*.o obj/*.d
 
 test : ;
 
-.PHONY: obj test clean
+.PHONY: objs test clean
 
