makefile cleanup part 2

--- a/Makefile.incl
+++ b/Makefile.incl
@@ -136,6 +136,11 @@ export DEPINCL = $(addprefix obj/, $(addsuffix .d, $(FLIST)))
 obj: 
 	mkdir  obj
 
+clean: 
+	rm -rf obj $(CLEANTARGETS)
+
+.PHONY: clean
+
 # compile the objects
 # as part of this we create dependency information 
 # 1: echo complaint about any undefined variable
