--- a/algorithms/CodeReplacement/src/Makefile
+++ b/algorithms/CodeReplacement/src/Makefile
@@ -51,23 +51,22 @@
 # 	NSF-ITR grant OCE-0205590
 # ========== end copyright notice ==============
 # default target
-default: obj
+default: objs
+
+CLEANTARGETS+=$(THELIB)
 
 include ../../../Makefile.incl
 -include $(DEPINCL)
 
 LIB_NAME=xaifBoosterCodeReplacement
 
-MAIN=../lib/lib$(LIB_NAME).a
+THELIB=../lib/lib$(LIB_NAME).a
 
-objs: obj $(MAIN)
+objs: obj $(THELIB)
 
-$(MAIN): $(OBJS)
+$(THELIB): $(OBJS)
 	$(AR) $(ARFLAGS) $@ $^
-
-clean:
-	rm -f obj/*.o obj/*.d $(MAIN)
 
 test : ;
 
-.PHONY: objs test clean default
+.PHONY: objs test default
