--- a/algorithms/AddressArithmetic/src/Makefile
+++ b/algorithms/AddressArithmetic/src/Makefile
@@ -1,14 +1,11 @@
 # default target
-default: obj
+default: objs
 
 include ../../../Makefile.incl
 -include $(DEPINCL)
 
 objs: obj $(OBJS)
 
-clean:
-	rm -f obj/*.o obj/*.d
-
 test : ;
 
-.PHONY: objs test clean
+.PHONY: objs test 
