makeflle cleanup part 3

--- a/algorithms/AddressArithmetic/test/Makefile
+++ b/algorithms/AddressArithmetic/test/Makefile
@@ -1,6 +1,6 @@
 MAIN=t
 
-test: buildStamp.hpp $(MAIN) quickRegression.bash
+test: obj buildStamp.hpp $(MAIN) quickRegression.bash
 
 CLEANTARGETS+=buildStamp.hpp tmp $(MAIN) quickRegression.bash
 
