--- a/algorithms/ConstantFolding/test/Makefile
+++ b/algorithms/ConstantFolding/test/Makefile
@@ -52,7 +52,7 @@
 # ========== end copyright notice ==============
 MAIN=t
 
-test: buildStamp.hpp $(MAIN) quickRegression.bash
+test: obj buildStamp.hpp $(MAIN) quickRegression.bash
 
 CLEANTARGETS+=buildStamp.hpp tmp $(MAIN) quickRegression.bash
 
