type change algorithm insertion into hierarchy + conversion and index cleanup - partial change

--- a/algorithms/BasicBlockPreaccumulationReverse/test/Makefile
+++ b/algorithms/BasicBlockPreaccumulationReverse/test/Makefile
@@ -74,7 +74,8 @@ $(wildcard ../../ControlFlowReversal/src/obj/*.o) 		   \
 $(wildcard ../../BasicBlockPreaccumulationTapeAdjoint/src/obj/*.o) \
 $(wildcard ../../BasicBlockPreaccumulationTape/src/obj/*.o) 	   \
 $(wildcard ../../BasicBlockPreaccumulation/src/obj/*.o)            \
-$(wildcard ../../Linearization/src/obj/*.o)
+$(wildcard ../../Linearization/src/obj/*.o)			   \
+$(wildcard ../../TypeChange/src/obj/*.o)
 
 VPATH+=../../CrossCountryInterface/lib
 LIBS+=-lxaifBoosterCrossCountryInterface
