--- a/.hgignore
+++ b/.hgignore
@@ -2,8 +2,34 @@ syntax: glob
 */src/obj/*
 */test/obj/*
 *.a
+*.o
 *~
+*.B
+*.w2f.f
+*.mod
+*.mod-whirl
+*.xsd
 */t
+*/tmp/*
 */buildStamp.hpp
+algorithms/*/test/quickRegression.bash
 .resetEnv.last
 doc/html/*
+testRoundTrip/.lastRun
+testRoundTrip/head*
+testRoundTrip/mfef90
+testRoundTrip/multi-pp.pl
+testRoundTrip/numericalComparison
+testRoundTrip/params.conf
+testRoundTrip/tmpOutput/*.out
+testRoundTrip/whirl2f
+testRoundTrip/whirl2f_be
+testRoundTrip/whirl2sexp
+testRoundTrip/whirl2xaif
+testRoundTrip/xaif2whirl
+testRoundTrip/xaifBooster
+testRoundTrip/ad_template.f
+testRoundTrip/all_globals_mod.f
+testRoundTrip/all_globals_mod.xb.x2w.w2f.pp.f
+testRoundTrip/driver
+testRoundTrip/driver.f90
