--- a/algorithms/TypeChange/Makefile
+++ b/algorithms/TypeChange/Makefile
@@ -50,10 +50,8 @@
 # This work is partially supported by:
 # 	NSF-ITR grant OCE-0205590
 # ========== end copyright notice ==============
-default: objs test 
-
 objs test clean:
 	cd src && $(MAKE) $@
 	cd test && $(MAKE) $@
 
-.PHONY: default objs test clean
+.PHONY: objs test clean
