--- a/algorithms/TypeChange/test/Makefile
+++ b/algorithms/TypeChange/test/Makefile
@@ -69,8 +69,7 @@ include ../../../Makefile.incl
 # pick up all algorith specific obj files
 ALG_OBJ_SET=$(wildcard ../src/obj/*.o)
 
-VPATH+=../../InlinableXMLRepresentation/lib
-LIBS+=-lxaifBoosterInlinableXMLRepresentation
+LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentation.a
 
 $(MAIN): $(OBJS) $(ALG_OBJ_SET) $(SYSTEM_OBJ_SET) $(LIBS)
 	$(CC) $^ $(LFLAGS) -o $@
