--- a/algorithms/BasicBlockPreaccumulationTapeAdjoint/test/Makefile
+++ b/algorithms/BasicBlockPreaccumulationTapeAdjoint/test/Makefile
@@ -74,25 +74,17 @@ $(wildcard ../../BasicBlockPreaccumulation/src/obj/*.o) \
 $(wildcard ../../Linearization/src/obj/*.o) \
 $(wildcard ../../TypeChange/src/obj/*.o) 
 
-VPATH+=../../CrossCountryInterface/lib
-LIBS+=-lxaifBoosterCrossCountryInterface
-
-VPATH+=../../DerivativePropagator/lib
-LIBS+=-lxaifBoosterDerivativePropagator
-
-VPATH+=../../InlinableXMLRepresentation/lib
-LIBS+=-lxaifBoosterInlinableXMLRepresentation
-
-VPATH+=../../AdjointUtils/lib
-LIBS+=-lxaifBoosterAdjointUtils
+LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentation.a
+LIBS+=../../CrossCountryInterface/lib/libxaifBoosterCrossCountryInterface.a
+LIBS+=../../DerivativePropagator/lib/libxaifBoosterDerivativePropagator.a
+LIBS+=../../AdjointUtils/lib/libxaifBoosterAdjointUtils.a
 
 # setup for ANGEL
 ifndef ANGELROOT
   $(error "Error:  environment variable ANGELROOT not defined!")
 endif
 
-VPATH+=$(ANGELROOT)/lib
-LIBS+=-langel
+LIBS+=$(ANGELROOT)/lib/libangel.a
 
 $(MAIN): $(OBJS) $(ALG_OBJ_SET) $(SYSTEM_OBJ_SET) $(LIBS)
 	$(CC) $^ $(LFLAGS) -o $@
