new algorithm/class SaveValuesAcross for saving values across a statement

--- a/algorithms/BasicBlockPreaccumulationTape/test/Makefile
+++ b/algorithms/BasicBlockPreaccumulationTape/test/Makefile
@@ -70,6 +70,7 @@ include ../../../Makefile.incl
 ALG_OBJ_SET=$(wildcard ../src/obj/*.o) $(wildcard ../../BasicBlockPreaccumulation/src/obj/*.o) $(wildcard ../../Linearization/src/obj/*.o) $(wildcard ../../TypeChange/src/obj/*.o)
 
 LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentation.a
+LIBS+=../../SaveValuesAcross/lib/libxaifBoosterSaveValuesAcross.a
 LIBS+=../../CrossCountryInterface/lib/libxaifBoosterCrossCountryInterface.a
 LIBS+=../../DerivativePropagator/lib/libxaifBoosterDerivativePropagator.a
 LIBS+=../../AdjointUtils/lib/libxaifBoosterAdjointUtils.a
