added SaveValuesAcross library to TraceDiff driver

--- a/algorithms/TraceDiff/driver/Makefile
+++ b/algorithms/TraceDiff/driver/Makefile
@@ -73,6 +73,9 @@ $(wildcard ../../TypeChange/src/obj/*.o)
 VPATH+=../../InlinableXMLRepresentation/lib
 LIBS+=-lxaifBoosterInlinableXMLRepresentation
 
+VPATH+=../../SaveValuesAcross/lib
+LIBS+=-lxaifBoosterSaveValuesAcross
+
 VPATH+=../../AdjointUtils/lib
 LIBS+=-lxaifBoosterAdjointUtils
 
